<resources>
    <string name="app_name">Smart</string>
    <string name="test">Test</string>
    <string name="stand_light01">Stand Light</string>
    <string name="hang_light01">Hang Light</string>
    <string name="kitchen">Kitchen</string>
    <string name="bed_room">Bed Room</string>
    <string name="living_room">Living room</string>
    <string name="setting">Setting</string>
    <string name="kitchenText">Kitchen</string>
    <string name="living_roomText">Living Room</string>
    <string name="bed_roomText">Bed Room</string>
    <string name="settingText">Setting</string>
    <string name="ip_lable">IP:</string>
    <string name="ipInpute"></string>
    <string name="IpHint">192.168.0.102</string>
    <string name="nameInpute"></string>
    <string name="nameHint">Table lamp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logotext">Mobile Computing Applications</string>
    <string name="toilet">Toilet</string>
    <string name="bath_room">Bath Room</string>
    <string name="coridor">Coeridor</string>
    <string name="bath_roomText">Bath Room</string>
    <string name="toilet_text">Toilet</string>
    <string name="room_label">Room :</string>
    <string name="serverInpute"></string>
    <string name="serverHint">farzadsaghaee.dynu.net</string>
</resources>
