<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:screenOrientation="portrait">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        app:elevation="0dp"
        android:id="@+id/appbar"

        >

        <TextView
            android:id="@+id/textView"

            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/lobster_two"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:text="@string/logotext"
            android:textColor="#fff"
            android:textSize="24sp"
            android:textStyle="bold">


        </TextView>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:tabTextColor="@color/tabTexColore"
        app:tabSelectedTextColor="@color/tabSelectedColore"
        app:tabBackground="@color/colorPrimary"
        tools:ignore="InvalidId"
        android:layout_gravity="center_horizontal"
        app:tabMode="scrollable">

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kitchen" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bed_room" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/living_room" />

        <com.google.android.material.tabs.TabItem
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toilet" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bath_room" />
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Corridor" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting" />
    </com.google.android.material.tabs.TabLayout>




    <androidx.viewpager.widget.ViewPager
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/viewpager_id"/>
</LinearLayout>